@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.RELEASE</version>
+        <version>2.4.2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -30,17 +30,17 @@
         <module>service</module>
         <module>sikkerhet</module>
         <module>statistikk</module>
+        <module>arkitektur</module>
+        <module>integrasjonstest</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <java.version>15</java.version>
 
         <!-- Melosys -->
-        <melosys.jsonschema.version>1.35.89</melosys.jsonschema.version>
-        <melosys.internt.kodeverk.version>5.15.54-a6f8e6b</melosys.internt.kodeverk.version>
+        <melosys.jsonschema.version>1.35.125</melosys.jsonschema.version>
+        <melosys.internt.kodeverk.version>5.15.70</melosys.internt.kodeverk.version>
         <melosys.brev.version>1.2.67</melosys.brev.version>
 
         <!-- NAV -->
@@ -48,49 +48,54 @@
         <abac.spring.version>1.6.0</abac.spring.version>
         <behandlingstatus.version>1.1.0</behandlingstatus.version>
         <doksys.dokumentproduksjon.version>3.3.4</doksys.dokumentproduksjon.version>
-        <token-support.version>1.3.1</token-support.version>
+        <token-support.version>1.3.3</token-support.version>
 
         <!-- Versjoner av eksterne biblioteker -->
-        <apache-httpclients.version>4.5.10</apache-httpclients.version>
-        <cxf.version>3.3.4</cxf.version>
+        <archunit.version>0.17.0</archunit.version>
+        <apache-httpclients.version>4.5.13</apache-httpclients.version>
+        <caffeine.version>3.0.2</caffeine.version>
+        <cxf.version>3.4.3</cxf.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang.version>3.9</commons-lang.version>
         <commons-text.version>1.8</commons-text.version>
         <findbugs.jsr305.version>3.0.2</findbugs.jsr305.version>
-        <guava.version>28.2-jre</guava.version>
+        <guava.version>30.1.1-jre</guava.version>
         <logback.version>1.2.3</logback.version>
-        <logstash.version>4.10</logstash.version>
-        <hikaricp.version>3.3.0</hikaricp.version>
+        <logstash.version>6.6</logstash.version>
+        <hikaricp.version>4.0.3</hikaricp.version>
         <ibmmq.version>9.0.5.0</ibmmq.version>
+        <jackson.version>2.12.2</jackson.version>
         <javax.ws.rs-api.version>2.1</javax.ws.rs-api.version>
         <json-smart.version>2.3</json-smart.version>
         <jms-api.version>2.0.1</jms-api.version>
-        <junit.version>4.12</junit.version>
-        <micrometer-jvm-extras.version>0.2.0</micrometer-jvm-extras.version>
-        <networknt.json-schema-validator.version>1.0.45</networknt.json-schema-validator.version>
+        <micrometer-jvm-extras.version>0.2.1</micrometer-jvm-extras.version>
+        <networknt.json-schema-validator.version>1.0.47</networknt.json-schema-validator.version>
+        <nimbus-jose-jwt.version>8.20.1</nimbus-jose-jwt.version>
         <ojdbc.version>18.3.0.0</ojdbc.version>
-        <okhttp.version>4.9.0</okhttp.version>
+        <okhttp.version>4.9.1</okhttp.version>
         <oracle.version>18</oracle.version>
-        <org.json.version>20180813</org.json.version>
         <oxmlparserv2.version>11.2.0.1.nojaxpservice</oxmlparserv2.version>
         <easy-random.version>5.0.0</easy-random.version>
         <restFixture.version>4.4</restFixture.version>
-        <shedlock.version>4.15.0</shedlock.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
+        <shedlock.version>4.20.0</shedlock.version>
+        <slf4j.version>1.7.30</slf4j.version>
         <springfox.version>3.0.0</springfox.version>
         <swagger.version>1.5.21</swagger.version>
-        <unleash.version>3.3.3</unleash.version>
+        <unleash.version>3.3.4</unleash.version>
 
         <!-- Transitive avhengiheter -->
-        <asm.version>7.1</asm.version>
-        <bcprov-jdk15on.version>1.57</bcprov-jdk15on.version>
+        <asm.version>9.1</asm.version>
+        <bcprov-jdk15on.version>1.68</bcprov-jdk15on.version>
         <commons-logging.version>1.2</commons-logging.version>
-        <javassist.version>3.24.0-GA</javassist.version>
+        <javassist.version>3.27.0-GA</javassist.version>
         <jaxb2-basics-runtime.version>0.12.0</jaxb2-basics-runtime.version>
+        <joda-time.version>2.9.4</joda-time.version>
         <objenesis.version>3.1</objenesis.version>
-        <woodstox.version>6.0.1</woodstox.version>
+        <stax2-api.version>4.2.1</stax2-api.version>
+        <woodstox.version>6.2.3</woodstox.version>
         <xmlsec.version>2.1.4</xmlsec.version>
+        <medlemskapsunntak-api-v1.version>1.1</medlemskapsunntak-api-v1.version>
+        <wiremock-standalone.version>2.27.2</wiremock-standalone.version>
     </properties>
 
     <!-- Unngå å put scope i dependency management. Sett det heller der det
@@ -135,6 +140,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>integrasjonstest</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>melosys-repository</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -159,6 +169,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>melosys-statistikk</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>no.nav.melosys</groupId>
                 <artifactId>melosys-internt-kodeverk</artifactId>
                 <version>${melosys.internt.kodeverk.version}</version>
@@ -178,6 +193,11 @@
                 <type>pom</type>
             </dependency>
             <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>${caffeine.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
                 <version>${findbugs.jsr305.version}</version>
@@ -191,6 +211,11 @@
                 <groupId>com.ibm.mq</groupId>
                 <artifactId>com.ibm.mq.allclient</artifactId>
                 <version>${ibmmq.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>${nimbus-jose-jwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.oracle.database.jdbc</groupId>
@@ -308,21 +333,6 @@
                 <version>${apache-httpclients.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-aop</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-webflux</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.springframework.kafka</groupId>
                 <artifactId>spring-kafka</artifactId>
                 <version>${spring-kafka.version}</version>
@@ -351,9 +361,19 @@
                 <version>${woodstox.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_annotations</artifactId>
+                <version>2.6.0</version>
+            </dependency>
+            <dependency>
                 <groupId>commons-logging</groupId>
                 <artifactId>commons-logging</artifactId>
                 <version>${commons-logging.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda-time.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.santuario</groupId>
@@ -364,6 +384,16 @@
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15on</artifactId>
                 <version>${bcprov-jdk15on.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.checkerframework</groupId>
+                <artifactId>checker-qual</artifactId>
+                <version>3.12.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.woodstox</groupId>
+                <artifactId>stax2-api</artifactId>
+                <version>${stax2-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.javassist</groupId>
@@ -451,14 +481,9 @@
             </dependency>
             <!--MEDL2 -->
             <dependency>
-                <groupId>no.nav.tjenestespesifikasjoner</groupId>
-                <artifactId>nav-medlemskap-v2-tjenestespesifikasjon</artifactId>
-                <version>${nav.tjenestespesifikasjoner.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>no.nav.tjenestespesifikasjoner</groupId>
-                <artifactId>nav-behandleMedlemskap-v2-tjenestespesifikasjon</artifactId>
-                <version>0-SNAPSHOT</version>
+                <groupId>no.nav.tjenester</groupId>
+                <artifactId>medlemskapsunntak-api-v1</artifactId>
+                <version>${medlemskapsunntak-api-v1.version}</version>
             </dependency>
             <!-- Dokumenthåndtering (DOKPROD) -->
             <dependency>
@@ -509,31 +534,26 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>com.github.tomakehurst</groupId>
+                <artifactId>wiremock-standalone</artifactId>
+                <version>${wiremock-standalone.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.tngtech.archunit</groupId>
+                <artifactId>archunit-junit5</artifactId>
+                <version>${archunit.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jeasy</groupId>
                 <artifactId>easy-random-core</artifactId>
                 <version>${easy-random.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.json</groupId>
-                <artifactId>json</artifactId>
-                <version>${org.json.version}</version>
             </dependency>
             <dependency>
                 <groupId>no.nav.melosys</groupId>
                 <artifactId>sikkerhet</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <version>${spring-boot.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.vaadin.external.google</groupId>
-                        <artifactId>android-json</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>no.nav.security</groupId>
@@ -549,6 +569,23 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.vaadin.external.google</groupId>
+                    <artifactId>android-json</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
@@ -556,6 +593,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <release>${java.version}</release>
+                        <encoding>UTF-8</encoding>
+                        <compilerArgs>--enable-preview</compilerArgs>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -586,7 +628,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-Xms256m -Dfile.encoding=UTF-8</argLine>
+                        <argLine>-Xms256m -Dfile.encoding=UTF-8 --enable-preview</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -614,14 +656,6 @@
         </pluginManagement>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <release>${java.version}</release>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
